assets/css/style.css
/* Reset */
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

/* main styles */
body {
    background-color: #faf7f2;
    color: #333333;
    font-family: 'Poppins', sans-serif;
}

h1, h2, h3, h4, h5, h6 {
    font-family: 'Playfair Display', serif;
    color: #333333;
}

/* Navigation */
header {
    background-color: #7b9eb9;
}

nav {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 10px 30px;
}

.logo img {
    margin-right: auto;
    width: 50px;
    height: 50px;
    border-radius: 50%;
    object-fit: cover;
}

.logo img:hover {
    width: 60px;
    height: 60px;
    transition: all 0.2s ease;
}

nav ul {
    list-style: none;
    display: flex;
    gap: 30px;
    position: absolute;
    left: 50%;
    transform: translateX(-50%);
}

nav ul li a {
    text-decoration: none;
    color: #333333;
    font-weight: 500;
}

nav ul li a:hover {
    color: #faf7f2;
    transition: all 0.2s ease;
}

.cv-button {
    text-decoration: none;
    background-color: #faf7f2;
    padding: 8px 20px;
    border-radius: 20px;
    color: #333333;
}

.cv-button:hover {
    background-color: #d4a5a5;
    color: #faf7f2;
    transition: all 0.2s ease;
}
/*================== index.html ==================*/
/* hero section */
.hero-content {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 30px;
}

.hero {
    padding: 50px 30px;
    text-align: center;
}

.hero h1 {
    text-align: center;
    font-size: 2.5rem;
    color: #333333;
}

.hero-tagline {
    text-align: center;
    color: #7b9eb9;
    font-size: 1.1rem;
    font-weight: 500;
    margin-bottom: 30px;
}

.hero-image img {
    width: 250px;
    height: 250px;
    border-radius: 50%;
    object-fit: cover;
    border: 4px solid #7b9eb9;
    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.5);
}

.hero-left, .hero-right {
    display: flex;
    flex-direction: column;
    gap: 15px;
    text-align: center;
}

.hero-button {
    text-decoration: none;
    background-color: #7b9eb9;
    padding: 8px 20px;
    color: #faf7f2;
    border-radius: 20px;
    text-align: center;
    margin-bottom: 10px;
    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
}
.hero-button:hover {
    background-color: #d4a5a5;
    color: #333333;
    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
    transform: translateY(2px);
    transition: all 0.2s ease;
}

/* tech stack section */
.tech-stack {
    padding: 20px;
    overflow: hidden;
}

.tech-track {
    display: flex;
    gap: 40px;
    animation: scroll 20s linear infinite;
}

.tech-track img {
    width: 60px;
    height: 60px;
    object-fit: contain;
}

@keyframes scroll {
    0% {
        transform: translateX(0);
    }
    100% {
        transform: translateX(-50%);
    }
}

/* Skills Section */
.skill-section {
    padding: 20px 60px;
}

.skill-section h2 {
    text-align: center;
}

.skill-bar {
    margin-bottom: 20px;
}

.skill-label {
    display: flex;
    justify-content: space-between;
    margin-bottom: 5px;
}

.bar {
    background-color: #7b9eb9;
    border-radius: 10px;
    height: 20px;
    width: 100%;
}

.fill {
    background-color: #d4a5a5;
    border-radius: 10px;
    height: 20px;
    animation: fillBar 1.5s ease-in-out forwards;
}

.skill-bar:hover .fill {
    animation: fillBar 1.5s ease-in-out forwards;
}

@keyframes fillBar {
    from {
        width: 0;
    }
    to {
        width: var(--fill-width);
    }
}

/*================== about.html ==================*/
.about-container {
    display: flex;
    gap: 40px;
    padding: 20px 60px;
}

.about-left {
    flex: 1;
}

.about-right {
    flex: 1;
}

.about-hero {
    display: flex;
    align-items: center;
    gap: 40px;
    padding: 50px 60px;
}

.about-hero img {
    width: 300px;
    height: 300px;
    border-radius: 50%;
    object-fit: cover;
    border: 4px solid #7b9eb9;
    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.5);
}

/* Card Flip */
.flip-card {
    width: 300px;
    height: 300px;
    position: relative;
    flex-shrink: 0;
    perspective: 1000px;
}

.flip-card-inner {
    width: 100%;
    height: 100%;
    position: relative;
    transition: transform 0.6s ease;
    transform-style: preserve-3d;
}

.flip-card-front, .flip-card-back {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}

.flip-card-back {
    transform: rotateY(180deg);
    backface-visibility: hidden;
}

.flip-card-front {
    backface-visibility: hidden;
}

.flip-card:hover .flip-card-inner {
    transform: rotateY(180deg);
}

.flip-card.flipped .flip-card-inner {
    transform: rotateY(180deg);
}

/*-- career timeline --*/
.timeline {
   padding: 20px 60px;
   background-color: #d4a5a5;
   border-radius: 10px;
   box-shadow: #333333 0px 4px 15px;
}

.timeline h2 {
    text-align: center;
    margin-bottom: 40px;
}

.timeline-container {
    position: relative;
    border-left: 3px solid #7b9eb9;
    padding-left: 30px;
}

.timeline-item {
    margin-bottom: 40px;
    position: relative;
}

.timeline-item::before {
    content: '';
    width: 15px;
    height: 15px;
    background-color: #7b9eb9;
    border-radius: 50%;
    position: absolute;
    left: -39px;
    top: 5px;
}

.about-cv-button-container {
    display: flex;
    justify-content: center;
    padding-top: 30px;
}

.about-cv-button {
    text-decoration: none;
    background-color: #7b9eb9;
    padding: 25px 25px;
    border-radius: 20px;
    color: #faf7f2;
    font-weight: 500;
    display: inline-block;
    margin-top: 20px;
      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
}

.about-cv-button:hover {
    background-color: #d4a5a5;
    color: #faf7f2;
    transition: all 0.2s ease;
    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
    transform: translateY(2px);
    transition: all 0.2s ease;
}

/*-- education --*/
.education {
    background-color: #d4a5a5;
    border-radius: 10px;
    padding: 20px 60px;
    margin-top: 20px;
    box-shadow: #333333 0px 4px 15px;
    text-align: center;
}

.education h2, .education h3, .education p {
    margin-bottom: 15px;
    margin-top: 15px;
}

/*================== contact.html ==================*/
.contact-pad {
    padding-bottom: 20px;
}

.contact-title {
    text-align: center;
    padding: 20px 0;
}

.contact-container {
    display: flex;
    gap: 40px;
    padding: 50px 60px;
    align-items: flex-start;
}
.contact-container a, .contact-container p {
    display: block;
    text-decoration: none;
    color: #333333;
    margin-bottom: 15px;
    font-size: 1.1rem;
}

.contact-container h2 {
    text-align: center;
    margin-bottom: 30px;
}

.contact-left {
    background-color: #d4a5a5;
    border-radius: 10px;
    padding: 30px;
    box-shadow: #333333 0px 4px 15px;
    flex: 1;
}

.contact-left form {
    display: flex;
    flex-direction: column;
    gap: 20px;
}

.contact-left input, .contact-left textarea {
    padding: 10px;
    border: 2px ;
    border-radius: 5px;
    font-size: 1rem;
    font-family: 'Poppins', sans-serif;
}

.contact-left textarea {
    resize: vertical;
    min-height: 100px;
}

.contact-left button {
    background-color: #faf7f2;
    color: #333333;
    padding: 10px 30px;
    border: none;
    border-radius: 20px;
    font-family: 'Poppins', sans-serif;
    font-size: 1rem;
    cursor: pointer;
    box-shadow: #333333 0px 4px 15px;
    transition: all 0.2s ease;
}

.contact-left button:hover {
    background-color:#7b9eb9 ;
    color: #faf7f2;
    transform: translateY(2px);
}

.contact-right {
    padding: 20px;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    flex: 1.5;
}

.contact-right a:hover {
    color: #7b9eb9;
}

.contact-details {
    background-color: #d4a5a5;
    border-radius: 10px;
    padding: 20px;
    box-shadow: #333333 0px 4px 15px;
    margin-bottom: 20px;
}

.linkedin-box {
    display: flex;
    flex-direction: column;
    align-items: center;
    flex: 1;
}

.social-plugs {
    background-color: #d4a5a5;
    border-radius: 10px;
    padding: 30px;
    box-shadow: #333333 0px 4px 15px;
    width: 95%;
    margin: auto;
    gap: 20px;
    text-align: center;
    padding-bottom: 20px;
}

.social-plugs h2 {
    margin-bottom: 20px;
}

.social-plugs li {
    display: inline-block;
    margin: 0 15px;
    text-decoration: none;
}

#gh-repo-data a {
    color: #333333;
    font-size: 1.1rem;
    text-decoration: none;
    margin-bottom: 20px;
}

#gh-repo-data a:hover {
    color: #7b9eb9;
}

/*================== Projects.html ==================*/
.projects-title {
    text-align: center;
    padding: 30px 0 10px 0;
}

.project-grid {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    gap: 30px;
    padding: 20px 60px;
    grid-template-rows: auto;  
}

.projects-heading {
    grid-column: 1 / -1;
    text-align: center;
    margin: 20px 0;
}

.project-card {
    background-color: #d4a5a5;
    border-radius: 10px;
    box-shadow: #333333 0px 4px 15px;
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
    padding: 20px;
    font-weight: 400;
    overflow: hidden;
    flex: 1;
}

.project-card a {
    text-decoration: none;
    color: #333333;
    font-size: 1.2rem;
    margin-top: 15px;
    padding: 10px;
}

.project-card a:hover {
    color: #faf7f2;
}

.project-card img {
    width: 100%;
    height: 150px;
    object-fit: cover;
    border-radius: 10px;
    margin-bottom: 15px;
}

.project-tags {
    display: flex;
    gap: 10px;
    flex-wrap: wrap;
    justify-content: center;
    margin-top: 10px;
}

.project-tags span {
    background-color: #7b9eb9;
    color: #faf7f2;
    padding: 5px 15px;
    border-radius: 20px;
    font-size: 0.8rem;
    font-weight: 500;
}

/*================== project details.html ==================*/
.overlay {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.7);
    display: flex;
    justify-content: center;
    align-items: center;
}

.modal {
    background-color: #d4a5a5;
    border-radius: 10px;
    padding: 40px;
    box-shadow: #333333 0px 4px 15px;
    width: 80%;
    max-width: 800px;
    text-align: center;
    max-height: 85vh;
    overflow-y: auto;
    position: relative;
}

.close-button {
    position: absolute;
    top: 15px;
    right: 20px;
    font-size: 1.5rem;
    color: #333333;
    text-decoration: none;
}

.close-button:hover {
    color: #faf7f2;
    transition: all 0.2s ease;
}

.modal-images {
    display: flex;
    gap: 15px;
    margin: 20px 0;
    flex-wrap: wrap;
    justify-content: center;
}

.modal-images img {
    width: 100%;
    max-width: 230px;
    height: 150px;
    object-fit: cover;
    border-radius: 10px;
    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
}

.project-links a {
    text-decoration: none;
    color: #333333;
    font-size: 1.2rem;
    margin-top: 15px;
    padding: 10px;
    
}

.project-links a:hover {
    color: #faf7f2;
    transition: all 0.2s ease;
}

/* footer */
footer {
    background-color: #7b9eb9;
    color: #faf7f2;
    text-align: center;
    display: flex;
    flex-direction: column;
    gap: 15px;
    align-items: center;
    padding: 20px 30px;
}

.social a {
    color: #faf7f2;
    font-size: 1.5rem;
    margin-right: 15px;
    text-decoration: none;
}

.social a:hover {
    color: #d4a5a5;
}

